# Image

./: BaseFilter.h  BmpController.cpp  BmpController.h  CMakeLists.txt  Controller.cpp  Controller.h  CropFilter.cpp  CropFilter.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  Image.cpp  Image.h  Matrix.cpp  Matrix.h  MatrixFilter.cpp  MatrixFilter.h  NegativeFilter.cpp  NegativeFilter.h  Parser.cpp  Parser.h  Pixel.cpp  Pixel.h  SharpeningFilter.cpp  SharpeningFilter.h  image_processor.cpp  readme.md  test.cpp
